intent to detect failure